@@ -511,8 +511,6 @@ class ClientRequest:
 
 class ClientResponse:
 
-    message = None  # RawResponseMessage object
-
     # from the Status-Line of the response
     version = None  # HTTP-Version
     status = None   # Status-Code
@@ -520,6 +518,7 @@ class ClientResponse:
 
     cookies = None  # Response cookies (Set-Cookie)
     content = None  # Payload stream
+    headers = None  # Response headers, CIMultiDictProxy
 
     _connection = None  # current connection
     flow_control_class = FlowControlStreamReader  # reader flow control
@@ -537,11 +536,11 @@ class ClientResponse:
         self.method = method
         self.url = url
         self.host = host
-        self.headers = None
         self._content = None
         self._writer = writer
         self._continue = continue100
         self._closed = False
+        self._should_close = True  # override by message.should_close later
 
     def _post_init(self, loop):
         self._loop = loop
@@ -591,8 +590,8 @@ class ClientResponse:
             httpstream = self._reader.set_parser(self._response_parser)
 
             # read response
-            self.message = yield from httpstream.read()
-            if self.message.code != 100:
+            message = yield from httpstream.read()
+            if message.code != 100:
                 break
 
             if self._continue is not None and not self._continue.done():
@@ -600,17 +599,18 @@ class ClientResponse:
                 self._continue = None
 
         # response status
-        self.version = self.message.version
-        self.status = self.message.code
-        self.reason = self.message.reason
+        self.version = message.version
+        self.status = message.code
+        self.reason = message.reason
+        self._should_close = message.should_close
 
         # headers
-        self.headers = CIMultiDictProxy(self.message.headers)
+        self.headers = CIMultiDictProxy(message.headers)
 
         # payload
         response_with_body = self.method.lower() != 'head'
         self._reader.set_parser(
-            aiohttp.HttpPayloadParser(self.message,
+            aiohttp.HttpPayloadParser(message,
                                       readall=read_until_eof,
                                       response_with_body=response_with_body),
             self.content)
